--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="TF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
